# datsci_testing

./: README.md  entity-resolution.md  machinelearning.md  pyproject.toml
datsci_testing/: get_merged_data.py  phonebook.py
datsci_testing/readers/: articles.py  grants.py  har.py  reusable_classifier.py
datsci_testing/sql/: create_tables.sql
scripts/: fasttext.py  har_dat_class.py  nlp_examples.py  radical_webpage.py  wine_quality_classification.py
